Redirect all traffic to HTTPS on www.aokranj.com domain (302 redirects for now)
Closes #14 @ github

--- a/public/.htaccess
+++ b/public/.htaccess
@@ -19,6 +19,15 @@ RewriteRule   ^/?(.*)           http://www.aokranj.com/$1   [R=302,L]
 
 
 
+### Redirect all traffic to HTTPS, but only for www.aokranj.com
+#
+<If "%{HTTP_HOST} == 'www.aokranj.com'">
+    RewriteCond     %{HTTPS}        off
+    RewriteRule     ^/?(.*)         https://%{HTTP_HOST}%{REQUEST_URI}   [R=302,L]
+</If>
+
+
+
 ### Redirects for old content
 #
 # Let's keep 302 for now
