--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.0",
     "gulp-livereload": "^3.8.1",
-    "gulp-plumber": "^1.1.0"
+    "gulp-plumber": "^1.1.0",
+    "gulp-sass": "^2.3.2"
   }
 }
