--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,7 +33,7 @@ services:
             MYSQL_ROOT_PASSWORD: root
         volumes:
             - ./dev-tools/docker/mysql-initdb.d:/docker-entrypoint-initdb.d
-            - ./tmp/docker-mysql:/var/lib/mysql
+            - ./var/docker-mysql:/var/lib/mysql
 
 
 
