Disable PHP execution in world-writeable dirs
Issue: https://github.com/aokranj/website/issues/40

--- a/dev-tools/docker/docker.dev.aokranj.com.conf
+++ b/dev-tools/docker/docker.dev.aokranj.com.conf
@@ -34,17 +34,9 @@
 
 
 
-### Disable PHP and .htaccess overrides in public directories
+### Disable PHP processing (and .htaccess overrides) in public writeable directories
 #
-<Directory "/var/www/docker.dev.aokranj.com/public/tmp">
-    AllowOverride       none
-    php_admin_value     engine   off
-
-    Order               Deny,Allow
-    Allow               from all
-</Directory>
-
-<Directory "/var/www/docker.dev.aokranj.com/public/wp-content/plugins/si-captcha-for-wordpress/captcha/cache">
+<Directory "/var/www/docker.dev.aokranj.com/public/wp-content/uploads">
     AllowOverride       none
     php_admin_value     engine   off
 
