unify pd-ao repos: Replace old db/ cobbled-together scripts with wp-cli-configmaps for wp_options management

--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,9 @@ files
 duplicator
 node_modules
 /conf/wp-config-local.php
+/conf/maps/local.php
 /public/wp-content/uploads/*
+/sbin/libexec/wp-cli-packages/cache/
 /var/docker-mysql
 /var/log/*
 /var/tmp/*
