gitignore: Ignore .git/ directories in sbin/libexec/wp-cli-packages/vendor/...
For some reason, `wp package install ...` / `composer install` insists on
fetching the code via cloning git repositories instead of using distribution
packages. This leaves .git/ directories around, and trying to commit such
code creates a git submodule, which we do NOT want.

Ignoring the .git/ directories at least avoids creating git submodules.

--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@ node_modules
 /docker/data/mariadb/*
 /public/wp-content/uploads/*
 /sbin/libexec/wp-cli-packages/cache/
+/sbin/libexec/wp-cli-packages/vendor/*/*/.git/
 /var/docker-mysql
 /var/log/*
 /var/tmp/*
