.htaccess: Do not process /sys/server-status with rewrite engine, as it is needed for status logging
(Related to aokranj/infrastructure#15.)

--- a/public/.htaccess
+++ b/public/.htaccess
@@ -12,6 +12,11 @@ RewriteBase   /
 
 
 
+# This is here for system status logger
+RewriteRule ^/?sys/server-status$       -       [L]
+
+
+
 ### Redirect aokranj.com to www.aokranj.com
 #
 RewriteCond   %{HTTP_HOST}      ^aokranj.com$
