--- a/.github/workflows/deploy-stg.yml
+++ b/.github/workflows/deploy-stg.yml
@@ -5,6 +5,12 @@ name: Deploy STG
 on:
     workflow_dispatch:
 
+    pull_request:
+        types: 
+            - closed
+        branches:
+            - master
+
     push:
         branches:
             - master
