edited doc/docker-dev-environment.md, docker/docker-compose.yml and added sbin/deploy-in-docker

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -40,7 +40,7 @@ services:
     container_name: 'aokranj-phpmyadmin'
     image: phpmyadmin/phpmyadmin:latest
     depends_on:
-      - aokranj-mariadb
+      - mariadb
     environment:
       PMA_HOST: mariadb
       PMA_PORT: 3306
